# HPCWeek2

./: mystudent1.cu  mystudent2.cu  student1.cu  student2.cu
Day1/: CMakeLists.txt
Day1/students/: linhdown@ictlab.usth.edu.vn
Day1/students/ex1/: CMakeLists.txt  Exercise.cu  Exercise.hpp  ex1
Day1/students/ex2/: Exercise.cu  Exercise.hpp  ex2
Day2/Student/: Student.cu  main.cu  matrix
Day3/students/: .cproject  .project  CMakeLists.txt  ex  main.cu  student.cu  student.hpp
Day3/students/utils/: chronoCPU.cpp
Day4/LW4-Images/: Collines_Equalized.ppm
Day4/students/: Makefile  app.cu  app.hpp  build.bat  main.cu  run
Day4/students_old/: CMakeLists.txt  Makefile  student.cu  student.hpp
Day4/students_old/utils/: chronoCPU.cpp  chronoGPU.cu  common.hpp  ppm.cpp  utils.cuh
Project/: CMakeLists.txt  main.cu  project
Project/Images/: Chateau_filtered.ppm  Collines_filtered.ppm  Paris_filtered.ppm  Paris_segmented.ppm
Project/students/: student1.cu  student1.cu~  student1.hpp  student1sample.cu  student2.cu  student2.hpp  student2sample.cu  student3.cu  student3.hpp  student4.cu  student4.hpp
Project/utils/: chronoCPU.cpp  common.hpp  ppm.cpp
